# day-of-week-algorithm

./: .cruft.json  LICENCE  README.md  mkdocs.yml  pyproject.toml
docs/: api_docs.md
src/day_of_week_algorithm/: main.py
